// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`big STEM tool render goldens (default state) > renders + pins a digest for appLab 1`] = `
{
  "buttons": 27,
  "inputs": 6,
  "lengthBucket": 79,
  "selects": 0,
  "sha": "d506eef49009cc96",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for assessmentLiteracy 1`] = `
{
  "buttons": 10,
  "inputs": 0,
  "lengthBucket": 30,
  "selects": 0,
  "sha": "6d2aa43edf8cc526",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for beehive 1`] = `
{
  "buttons": 119,
  "inputs": 14,
  "lengthBucket": 873,
  "selects": 5,
  "sha": "6c42f11f754b5764",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for birdLab 1`] = `
{
  "buttons": 127,
  "inputs": 1,
  "lengthBucket": 726,
  "selects": 0,
  "sha": "c4cd765e94373575",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for cephalopodLab 1`] = `
{
  "buttons": 52,
  "inputs": 1,
  "lengthBucket": 256,
  "selects": 0,
  "sha": "ce4dd2504bd3f002",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for learningLab 1`] = `
{
  "buttons": 22,
  "inputs": 0,
  "lengthBucket": 89,
  "selects": 0,
  "sha": "dd3bc57a7aba62a0",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for nutritionLab 1`] = `
{
  "buttons": 24,
  "inputs": 0,
  "lengthBucket": 166,
  "selects": 0,
  "sha": "9e577dfd9d926fc0",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for plateTectonics 1`] = `
{
  "buttons": 35,
  "inputs": 5,
  "lengthBucket": 212,
  "selects": 0,
  "sha": "062df60d100d6743",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for printingPress 1`] = `
{
  "buttons": 25,
  "inputs": 0,
  "lengthBucket": 226,
  "selects": 0,
  "sha": "59191292809ddccb",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for raptorHunt 1`] = `
{
  "buttons": 50,
  "inputs": 1,
  "lengthBucket": 147,
  "selects": 0,
  "sha": "0eac58702b0656ac",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for roadReady 1`] = `
{
  "buttons": 17,
  "inputs": 5,
  "lengthBucket": 108,
  "selects": 2,
  "sha": "8e0c34049faf9c17",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for solarSystem 1`] = `
{
  "buttons": 47,
  "inputs": 1,
  "lengthBucket": 256,
  "selects": 0,
  "sha": "c5faf4e418a7599c",
  "svgs": 0,
}
`;
